# FEBuilderGBA

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  BUILD-OUTPUT-STRUCTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN-split-package-updates.md  DEVELOPMENT-WORKFLOW.md  FEBuilderGBA.sln  HANDOFF.md  NOTICE  PHASE0-COMPLETE.md  README.7-zip32.dll.md  README.md  SKIPPED-TESTS-EXPLANATION.md  SPLIT-PACKAGE-FINAL-STATUS.md  SPLIT-PACKAGE-PROGRESS.md  THIRD-PARTY-NOTICES.md  commitlint.config.mjs  coverlet.runsettings  pr285.diff  pr309-clean-output.txt  pr309-test-output.txt  release.ps1  test_extract.ps1
.github/: SUPPORT.md  copilot-instructions.md  release.yml
.workflow/: master-pipeline.yml
FEBuilderGBA.Android.Tests/: FEBuilderGBA.Android.Tests.csproj  (+3 more)
tools/gba-playtest/: .gitignore  README.md  bounded_process.py  conftest.py  pyproject.toml  requirements-mgba-bootstrap.txt  requirements-mgba-build.txt  scenario.schema.json
tools/gba-playtest/febuildergba_playtest/: __init__.py  __main__.py  mgba_backend.py  model.py  process_worker.py  runner.py
tools/gba-playtest/setuptools-shim/: sitecustomize.py
tools/gba-playtest/tests/: bounded_process.py  bounded_process_worker.py  run_real_cli_proof.py  run_real_mgba_phase_smoke.py  run_real_mgba_proof.py  synthetic_gba.py  test_bootstrap.py  test_bounded_process.py  test_dll_search.py  test_main.py  test_mgba_backend_contract.py  test_mgba_cffi_preprocessor.py  test_model.py  test_phase_smoke.py  test_real_proof.py  test_runner.py  test_sanitize.py  test_synthetic_gba.py
(+3156 files in other folders)
