[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "febuildergba-playtest"
version = "0.1.0"
description = "Deterministic headless mGBA playtest engine for FEBuilderGBA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "laqieer", email = "laqieer@126.com" }]
keywords = ["gba", "mgba", "playtest", "febuildergba", "deterministic"]

# The runtime has NO third-party runtime dependencies. The optional native mGBA
# 0.10.5 binding is installed only by the explicit bootstrap scripts under
# scripts/, never automatically.
dependencies = []

[project.scripts]
febuildergba-playtest = "febuildergba_playtest.__main__:main"

[tool.setuptools]
packages = ["febuildergba_playtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
